# TrueDegree-

./: .gitignore  Cargo.toml  LICENSE  README.md  SCAFFOLD_SUMMARY.md
.github/workflows/: frontend_ci.yml  rust_ci.yml
apps/interface/: .env.example  package.json  tsconfig.json
apps/interface/src/app/: layout.tsx  page.tsx
apps/interface/src/app/api/verify/: route.ts
apps/interface/src/components/: Navbar.tsx  TranscriptDisplay.tsx  VerifyForm.tsx
apps/interface/src/context/: WalletContext.tsx
apps/interface/src/lib/: soroban.ts
contracts/credentialing/: Cargo.toml
contracts/credentialing/src/: lib.rs
scripts/: deploy.sh
