[package]
name = "credentialing"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.0", features = ["alloc", "testutils"] }
